# hs-aws

./: .gitignore
lambda/: Main.hs  build-command.sh  default.nix  hs-lambda.cabal  lambda.nix  lessee.nix  shell.nix
lambda/nix/: sources.json
lambda/tf/: main.tf
