cabal-version:       >=1.10
name:                hs-lambda
version:             0.1.0.0
author:              Deco
build-type:          Simple

executable hs-lambda
  main-is:             Main.hs
  build-depends:
      base
    , aeson
    , aeson-pretty
    , text
    , aws-lambda-haskell-runtime == 4.1.0
    , http-types
    , bytestring
  default-language:    Haskell2010
  